--- a/index.html
+++ b/index.html
@@ -19,12 +19,23 @@
         <p class="lead">A simple calendar app for scheduling your work day</p>
         <p id="currentDay" class="lead"></p>
     </header>
-    <div class="container">
+    <div class="container" id="full-day-block">
         <!-- Timeblocks go here -->
-    </div>
+        <div class="row  time-block">
+            <div class="col-md-2 hour">
+                9 AM
+            </div>
+            <textarea class="col-md-8 past first" id="textArea9AM">
 
+        </textarea>
+            <button class="col-md-2 saveBtn ">
+                <i class="far fa-save"></i> Save
+            </button>
+        </div>
+    </div>
     <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.24.0/moment.min.js"></script>
+    <script src="script.js"></script>
 </body>
 
 </html>
